# Copyright (C) 2012 Aljosha Papsch <papsch.al@googlemail.com>
#
# This file is part of librippix.
#
# librippix is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or (at
# your option) any later version.
#
# librippix is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see `http://www.gnu.org/licenses/'.

AUTOMAKE_OPTIONS = dist-xz
SUBDIRS = lib librippix
ACLOCAL_AMFLAGS = -I m4
EXTRA_DIST = m4/gnulib-cache.m4 \
	librippix.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = librippix.pc
